<resources>
    <string name="app_name">Submission Event Dicoding</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="active_events">Active</string>
    <string name="completed_events">Completed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buka_link_acara">Buka Link Acara</string>
    <string name="title_active_events">Active Event</string>
    <string name="title_completed_events">Complete Event\n</string>
    <string name="tambah_favorite">tambah favorite</string>
    <string name="title_favorite_event">Favorite</string>
    <string name="favorite_events">Favorite</string>
    <string name="setting">Setting</string>
    <string name="title_settings">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="pilih_tema">Pilih Tema</string>
</resources>