<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_active"
        android:icon="@drawable/ic_active"
        android:title="@string/active_events" />
    <item
        android:id="@+id/navigation_completed"
        android:icon="@drawable/ic_completed"
        android:title="@string/completed_events" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_events" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting" />
</menu>