<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.submissioneventdicoding.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
        <action
            android:id="@+id/action_home_to_event_detail"
            app:destination="@+id/eventDetailFragment" />

    <fragment
        android:id="@+id/navigation_active_events"
        android:name="com.example.submissioneventdicoding.ui.event.ActiveEventsFragment"
        android:label="@string/title_active_events"
        tools:layout="@layout/fragment_active_events" />

    <fragment
        android:id="@+id/navigation_completed_events"
        android:name="com.example.submissioneventdicoding.ui.event.CompletedEventsFragment"
        android:label="@string/title_completed_events"
        tools:layout="@layout/fragment_completed_events" />
</navigation>